# src/routes/task.route.ts
@@ -1,0 +1,8 @@
+import express from 'express';
+import { TaskController } from '../controllers/task.controller';
+
+const taskRoutes = express.Router();
+
+taskRoutes.get('/', TaskController.all);
+
+export { taskRoutes };
